# PersonalProjects

Rogue Key Attacks in BLS Aggregate Signatures/: Cargo.toml  devenv.nix  devenv.yaml
Rogue Key Attacks in BLS Aggregate Signatures/bls_create_srs/: Cargo.toml
Rogue Key Attacks in BLS Aggregate Signatures/bls_create_srs/src/: main.rs
Rogue Key Attacks in BLS Aggregate Signatures/bls_lib/: Cargo.toml
Rogue Key Attacks in BLS Aggregate Signatures/bls_lib/setup/: srs_bls12_381
Rogue Key Attacks in BLS Aggregate Signatures/bls_lib/src/: bls.rs  hash.rs  key.rs  lib.rs  signature.rs  srs.rs  traits.rs
Rogue Key Attacks in BLS Aggregate Signatures/crypto_lib/: Cargo.toml
Rogue Key Attacks in BLS Aggregate Signatures/crypto_lib/src/: errors.rs  lib.rs
Rogue Key Attacks in BLS Aggregate Signatures/crypto_lib/src/hash/: hash_to_field.rs
Rogue Key Attacks in BLS Aggregate Signatures/crypto_lib/src/hash/monolith/: mod.rs  utils.rs
Rogue Key Attacks in BLS Aggregate Signatures/crypto_lib/src/hash/pedersen/: constants.rs  mod.rs  (+1 more)
Rogue Key Attacks in BLS Aggregate Signatures/exercise_1/: Cargo.toml  README.md
Rogue Key Attacks in BLS Aggregate Signatures/exercise_1/src/: lib.rs
Rogue Key Attacks in BLS Aggregate Signatures/exercise_2/: Cargo.toml  README.md
Rogue Key Attacks in BLS Aggregate Signatures/exercise_2/src/: attack.rs
Rogue Key Attacks in BLS Aggregate Signatures/math_lib/: Cargo.toml
Rogue Key Attacks in BLS Aggregate Signatures/math_lib/src/: lib.rs  traits.rs
Rogue Key Attacks in BLS Aggregate Signatures/math_lib/src/elliptic_curve/: point.rs
Rogue Key Attacks in BLS Aggregate Signatures/math_lib/src/field/: element.rs  errors.rs  mod.rs  traits.rs  u64_prime_field.rs
Rogue Key Attacks in BLS Aggregate Signatures/math_lib/src/polynomial/: error.rs  mod.rs
Rogue Key Attacks in BLS Aggregate Signatures/math_lib/src/unsigned_integer/: element.rs  montgomery.rs  traits.rs
(+183 files in other folders)
