[package]
name = "crypto_lib"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
math_lib = { workspace = true, features = ["alloc"] }
sha3 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }

# Optional
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
rayon = { version = "1.8.0", optional = true }

[dev-dependencies]
rand = "0.8.5"

[features]
default = ["std"]
std = ["math_lib/std", "sha2/std", "sha3/std", "serde?/std"]
serde = ["dep:serde"]
parallel = ["dep:rayon"]
